Added other experiences

--- a/_experience/2022-06-01-netflix.md
+++ b/_experience/2022-06-01-netflix.md
@@ -7,4 +7,4 @@ daterange: "June 2022 - February 2024"
 selected: true
 ---
 
-I designed a multi-objective optimization algorithm to generate bitrate ladders for 2-D video streaming that balances QoE and CDN efficiency.
+Designed a multi-objective optimization algorithm to generate bitrate ladders for 2-D video streaming that balances QoE and CDN efficiency.
