Corrected capitalization in experience

--- a/_experience/2022-06-01-netflix.md
+++ b/_experience/2022-06-01-netflix.md
@@ -1,5 +1,5 @@
 ---
-position: "Video streaming intern"
+position: "Video Streaming Intern"
 company: "Netflix"
 place: "Los Gatos"
 logourl: "/images/company_logos/netflix.png"
